SERVER-33766 Ensure that secondaries always invalidate the in-memory routing table when new metadata arrives